rust/transpiler/snapshots/expressions@short_circuit@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/expressions/short_circuit.hyper
---
injections:
  - end: 18
    prefix: "from hyper import escape, replace_markers\n\ndef ShortCircuit("
    start: 0
    suffix: ""
    type: python
  - end: 31
    prefix: ", "
    start: 19
    suffix: ""
    type: python
  - end: 99
    prefix: ") -> str:\n    _parts = []\n    _parts.append(f\"\"\"<div>‹ESCAPE:{"
    start: 48
    suffix: "}›</div>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 78
    compiled_start: 60
    range_type: Python
    source_end: 18
    source_start: 0
  - compiled_end: 92
    compiled_start: 80
    range_type: Python
    source_end: 31
    source_start: 19
  - compiled_end: 203
    compiled_start: 154
    range_type: Python
    source_end: 99
    source_start: 48
