rust/transpiler/snapshots/expressions@ternary@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/expressions/ternary.hyper
---
injections:
  - end: 10
    prefix: "from hyper import escape, replace_markers\n\ndef Ternary("
    start: 0
    suffix: ""
    type: python
  - end: 30
    prefix: ") -> str:\n    _parts = []\n    _parts.append(f\"\"\"<span>‹ESCAPE:{"
    start: 23
    suffix: ""
    type: python
  - end: 66
    prefix: "}› ‹ESCAPE:{"
    start: 31
    suffix: "}›</span>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 65
    compiled_start: 55
    range_type: Python
    source_end: 10
    source_start: 0
  - compiled_end: 133
    compiled_start: 128
    range_type: Python
    source_end: 30
    source_start: 23
  - compiled_end: 178
    compiled_start: 145
    range_type: Python
    source_end: 66
    source_start: 31
