rust/transpiler/snapshots/props@complex_types@injections.snap
---
source: transpiler/tests/golden_tests.rs
expression: "serde_json::json!({\n    \"ranges\": result.ranges, \"injections\": result.injections,\n})"
input_file: transpiler/tests/props/complex_types.hyper
---
injections:
  - end: 228
    prefix: "from hyper import escape, replace_markers\n\ndef ComplexTypes(simple: str, with_default: str = \"default\", optional: str | None = None, items: list[str], mapping: dict[str, int], nested: list[dict[str, Any]], callback: Callable[[int], str], *args: tuple, **kwargs: dict) -> str:\n    _parts = []\n    _parts.append(f\"\"\"<div><span>‹ESCAPE:{"
    start: 222
    suffix: ""
    type: python
  - end: 260
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 248
    suffix: ""
    type: python
  - end: 298
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 280
    suffix: ""
    type: python
  - end: 328
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 318
    suffix: ""
    type: python
  - end: 360
    prefix: "}›</span><span>‹ESCAPE:{"
    start: 348
    suffix: "}›</span></div>\"\"\")\n    return replace_markers(\"\".join(_parts))\n"
    type: python
ranges:
  - compiled_end: 71
    compiled_start: 60
    range_type: Python
    source_end: 11
    source_start: 0
  - compiled_end: 102
    compiled_start: 73
    range_type: Python
    source_end: 41
    source_start: 12
  - compiled_end: 131
    compiled_start: 104
    range_type: Python
    source_end: 69
    source_start: 42
  - compiled_end: 149
    compiled_start: 133
    range_type: Python
    source_end: 86
    source_start: 70
  - compiled_end: 174
    compiled_start: 151
    range_type: Python
    source_end: 110
    source_start: 87
  - compiled_end: 204
    compiled_start: 176
    range_type: Python
    source_end: 139
    source_start: 111
  - compiled_end: 236
    compiled_start: 206
    range_type: Python
    source_end: 170
    source_start: 140
  - compiled_end: 250
    compiled_start: 238
    range_type: Python
    source_end: 183
    source_start: 171
  - compiled_end: 266
    compiled_start: 252
    range_type: Python
    source_end: 198
    source_start: 184
  - compiled_end: 340
    compiled_start: 334
    range_type: Python
    source_end: 228
    source_start: 222
  - compiled_end: 376
    compiled_start: 364
    range_type: Python
    source_end: 260
    source_start: 248
  - compiled_end: 418
    compiled_start: 400
    range_type: Python
    source_end: 298
    source_start: 280
  - compiled_end: 452
    compiled_start: 442
    range_type: Python
    source_end: 328
    source_start: 318
  - compiled_end: 488
    compiled_start: 476
    range_type: Python
    source_end: 360
    source_start: 348
